<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/nombre_del_lugar"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_la_direccion"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_el_telefono"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Descripción:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingrese la descripción"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Categoría:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textViewRedesSociales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Redes Sociales:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Instagram:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextInstagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingrese el enlace de Instagram"
                android:inputType="textUri"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facebook:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingrese el enlace de Facebook"
                android:inputType="textUri"
                android:padding="10dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/textViewHorarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Horarios de Atención:"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Domingo:"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHoraInicioDomingo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Hora de inicio"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/editTextHoraCierreDomingo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Hora de cierre"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Sábado:"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHoraInicioSabado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Hora de inicio"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/editTextHoraCierreSabado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Hora de cierre"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lunes"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHoraInicioLunes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_inicio"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/editTextHoraCierreLunes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_cierre"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/martes"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHoraInicioMartes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_inicio"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/editTextHoraCierreMartes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_cierre"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/miercoles"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHoraInicioMiercoles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_inicio"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/editTextHoraCierreMiercoles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_cierre"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jueves"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHoraInicioJueves"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_inicio"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/editTextHoraCierreJueves"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_cierre"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/viernes"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHoraInicioViernes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_inicio"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/editTextHoraCierreViernes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hora_de_cierre"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textColorHint="#757575" />
            </LinearLayout>



            <!-- Agrega aquí más LinearLayouts si es necesario -->


            <Button
                android:id="@+id/buttonGuardarLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="19dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/guardar_lugar"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
