<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="ALGO VA ACÁ"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:onClick="irPerfilUsuario"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informacion_personal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_gravity="center_vertical"
                android:onClick="irPerfilUsuario"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bell"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/notificacion"
                android:layout_marginStart="15dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mis_lugares"
                android:layout_marginStart="15dp"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_heart"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardados"
                android:layout_marginStart="15dp"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="9dp"
            android:layout_height="1dp"
            android:background="#000000" />


    </LinearLayout>

</RelativeLayout>